--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JVT900H6s0g?si=8B2xVApuH0KiMDSx" title="Youtube video player" frameborders="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <div class="text-content">
-                    <ul class="bg-white p-left">
-                        <li class="p-top p-bottom"><h4>In breve</h4></li>
-                        <li>Difficoltà: <strong>Facile</strong></li>
-                        <li class="p-top">Tempo: <strong>40 min</strong></li>
-                        <li class="p-top">Porzione per: <strong>8 persone</strong></li>
-                        <li class="p-top">Costo: Contenuto</li>
-                        <li class="p-top p-bottom"><strong>Note:</strong> +2 ore di riposo in frigo</li>
+                    <h4 class="p-top p-bottom p-left bg-white">In breve</h4>
+                    <ul class="bg-white p-left grid">
+                        <li class="col p-top2">Difficoltà: <strong>Facile</strong></li>
+                        <li class="col p-top">Tempo: <strong>40 min</strong></li>
+                        <li class="col p-top">Porzione per: <strong>8 persone</strong></li>
+                        <li class="col p-top">Costo: <strong>Contenuto</strong></li>
+                        <li class="col p-top p-bottom"><strong>Note:</strong> +2 ore di riposo in frigo</li>
                     </ul>
                 </div>
                 <ul class="p-top d-flex space-between">
@@ -46,11 +46,11 @@
                     <li class="logo2"><i class="fa-brands fa-youtube"></i></li>
                 </ul>
             </section>
-            <aside class="d-none">
+            <aside class="p-top d-none">
                 <img src="img/banner.png" alt="pubblicità">
             </aside>
             <section>
-                <div class="Presentation p-top p-bottom">
+                <div class="presentation p-top p-bottom">
                     <h3>Presentation</h3>
                     <hr>
                     <div class="img">
