--- a/index.html
+++ b/index.html
@@ -25,18 +25,20 @@
                     <span>Tiramisù</span>
                     <span class="d-none"> (Dolce Tradizionale)</span>
                 </div>
-                <div id="video" class="p-top">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JVT900H6s0g?si=8B2xVApuH0KiMDSx" title="Youtube video player" frameborders="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
-                <div class="text-content">
-                    <h4 class="p-top p-bottom p-left bg-white">In breve</h4>
-                    <ul class="bg-white p-left grid">
-                        <li class="col p-top2">Difficoltà: <strong>Facile</strong></li>
-                        <li class="col p-top">Tempo: <strong>40 min</strong></li>
-                        <li class="col p-top">Porzione per: <strong>8 persone</strong></li>
-                        <li class="col p-top">Costo: <strong>Contenuto</strong></li>
-                        <li class="col p-top p-bottom"><strong>Note:</strong> +2 ore di riposo in frigo</li>
-                    </ul>
+                <div class="section">
+                    <div id="video" class="p-top">
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JVT900H6s0g?si=8B2xVApuH0KiMDSx" title="Youtube video player" frameborders="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <div class="text-content">
+                        <h4 class="p-top p-bottom p-left bg-white">In breve</h4>
+                        <ul class="bg-white p-left grid">
+                            <li class="col p-top2">Difficoltà: <strong>Facile</strong></li>
+                            <li class="col p-top">Tempo: <strong>40 min</strong></li>
+                            <li class="col p-top">Porzione per: <strong>8 persone</strong></li>
+                            <li class="col p-top">Costo: <strong>Contenuto</strong></li>
+                            <li class="col p-top p-bottom"><strong>Note:</strong> +2 ore di riposo in frigo</li>
+                        </ul>
+                    </div>
                 </div>
                 <ul class="p-top d-flex space-between">
                     <li class="logo1"><i class="fa-brands fa-facebook"></i></li>
@@ -56,7 +58,7 @@
                     <div class="img">
                         <img src="img/tiramisu.jpg" alt="tiramisù">
                     </div>
-                    <p class="p-top">Back in the day, grandmothers used to prepare a breakfast that we might call humble today, but was considered very rich at the time! Today the recipe is still unchanged, just break a very fresh egg into a glass, beat it with sugar, and add coffee or hot milk, for children, or <strong>Marsala wine</strong> or aniseed for adults. This marvelous cream gave rise to mascarpone cream used to make <strong>Tiramisù</strong> (mascarpone cheese and ladyfingers dessert). This is the <strong>best Italian dessert</strong>, the most popular and beloved of them all, and it has also birthed many other versions, even an egg-free Tiramisù! There is also a strawberry and Nutella tiramisù! Although the origins of this famous dessert are unclear, because it is disputed between the regions of Veneto, Friuli-Venezia Giulia, Piedmont, and Tuscany, it remains a cornerstone of Italian cuisine and it's widely prepared from North to South. Unfortunately, we weren't able to find out who invented it, but we can certainly teach you how to prepare your best tiramisù ever. So here's the recipe: try it and let us know what you think! </p>
+                    <p class="p-top p-10">Back in the day, grandmothers used to prepare a breakfast that we might call humble today, but was considered very rich at the time! Today the recipe is still unchanged, just break a very fresh egg into a glass, beat it with sugar, and add coffee or hot milk, for children, or <strong>Marsala wine</strong> or aniseed for adults. This marvelous cream gave rise to mascarpone cream used to make <strong>Tiramisù</strong> (mascarpone cheese and ladyfingers dessert). This is the <strong>best Italian dessert</strong>, the most popular and beloved of them all, and it has also birthed many other versions, even an egg-free Tiramisù! There is also a strawberry and Nutella tiramisù! Although the origins of this famous dessert are unclear, because it is disputed between the regions of Veneto, Friuli-Venezia Giulia, Piedmont, and Tuscany, it remains a cornerstone of Italian cuisine and it's widely prepared from North to South. Unfortunately, we weren't able to find out who invented it, but we can certainly teach you how to prepare your best tiramisù ever. So here's the recipe: try it and let us know what you think! </p>
                 </div>
             </section>
         </div>
